--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "gcloud preview app deploy app.yaml"
   },
   "dependencies": {
-    "restify": "^4.0.0"
+    "restify": "^4.0.0",
+    "nodemailer": "^1.10.0",
+    "nodemailer-direct-transport": "^1.1.0"
   }
 }
