--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "restify": "^4.0.0",
     "nodemailer": "^1.10.0",
-    "nodemailer-direct-transport": "^1.1.0"
+    "nodemailer-direct-transport": "^1.1.0",
+    "email-templates": "2.0.1",
+    "ejs":"2.0.0"
   }
 }
