--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "restify": "^4.0.0",
-    "nodemailer": "^1.10.0",
+    "nodemailer": "0.7.1",
     "nodemailer-direct-transport": "^1.1.0",
     "email-templates": "2.0.1",
     "ejs":"2.3.4"
